refactor(service): use mappers and custom exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 # HIBERNATE SETTINGS
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# OPENAPI SETTINGS
+openapi.server.url=http://localhost:8080
