--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,8 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # OPENAPI SETTINGS
 openapi.server.url=http://localhost:8080
+
+# LOGGING SETTINGS
+logging.level.org.springframework.web=INFO
+logging.level.com.example.mobile_place_order=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
